Fix bug horizontal scroll on firefox 2

--- a/static/_screen.sass
+++ b/static/_screen.sass
@@ -343,6 +343,7 @@ nav ul
   ol
     counter-reset: reasons
     margin: 1.2em auto 0
+    max-width: 45em
     overflow: hidden
     padding: 0 10% 3em
 
